# Straitjacket

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.claude-regression/20260513T155603-afbf/: test-snapshot.json
.github/workflows/: build-binaries.yml
.straitjacket/: bugs.json  report-bug.config.json
agents/: adversarial-happy-path.md  adversarial-misalignment.md  adversarial-synthesis.md  adversarial-vacuousness.md  audit-concurrency.md  audit-dead-code.md  audit-doc-drift.md  audit-error-handling.md  audit-latent-bug.md  audit-performance.md  audit-refuter.md  audit-runner.md  audit-security.md  audit-synthesis.md  coverage-reviewer.md  fuzz-harness-author.md  fuzz-runner.md  gate-runner.md  implementation-author.md  integration-test-author.md  mutation-runner.md  root-cause-analyst.md  unit-test-author.md
docs/: STAGES.md  TECHNICAL.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decide_pre_adversarial.rs  fuzz_format_rust_byte_literal.rs  fuzz_rust_test_status.rs
hooks/: hooks.json
schemas/: audit-finding.schema.json  bug-record.schema.json  work-unit.schema.json
scripts/: cargo-msvc.cmd
skills/audit/: SKILL.md
skills/debug/: SKILL.md
skills/fuzz/: SKILL.md
skills/mutation/: SKILL.md
skills/regression/: SKILL.md
skills/regression-tests/: SKILL.md
skills/report-bug/: SKILL.md
skills/tdd/: SKILL.md
skills/triage/: SKILL.md
src/: main.rs
src/commands/: audit_run.rs  baseline_check.rs  bug_status.rs  (+15 more)
workflows/: adversarial.js  audit.js  fanout.js  tdd-cycle.js
(+5 files in other folders)
