[package]
name = "straitjacket"
version = "0.1.0"
edition = "2021"
description = "Multi-agent test workflow CLI for the straitjacket Claude Code plugin"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
wait-timeout = "0.2"
regex = "1"

[dev-dependencies]
tempfile = "3"
